--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
      <head>
-          <title>Hello World</title>
+          <meta charset="UTF-8">
+          <title>Hello World!</title>
+          <meta name="viewport" content="width=device-width,initial-scale=1">
           <link rel="styleshet" href="bluestyle.css">
      </head>
 
